# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  loppuraportti.md  pyproject.toml
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  app_msg.py  bibtesti.bib  build.py  config.py  database_connection.py  initialize_database.py  populate_database.py  retro.md  retro_3.md
src/citations/: bibtex_maker.py  citation_factory.py  citation_factory_stub.py  citation_strings.py  new_citation.py
src/db/: build.py  citation_repository.py  citations_data.txt  database.sqlite  initialize.py  populate.py  tag_repository.py
src/entities/: citation.py  citation_factory_stub.py
src/entities/citations/: citation_factory.py  citation_type.py  new_citation.py
src/logic/: citation_manager.py  citationmanager.py
src/repositories/: citation_repository.py
src/tests/: app_test.py  bibtest.bib  bibtex_maker_test.py  citation_factory_test.py  citation_manager_test.py  citation_manager_test.py_disabled_for_now  citation_str_test.py  citation_test.py  initdb_test.py  populate_test.py  resource.robot  tui.robot  tui_test.py
src/tui/: stub_io.py  tui.py  tui_io.py
