[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Heljä Lehtinen <lehthelj@gmail.com>"]
readme = "README.md"
packages = [{include = "ohtu_miniprojekti"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
